Replace `.collect(toList())` calls on streams to `.toList()` ()