@@ -19,7 +19,6 @@
  */
 package org.neo4j.kernel.api.impl.fulltext;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.List;
@@ -83,7 +82,7 @@ class FulltextPartitionedIndexSkipAndLimitTest extends FulltextProceduresTestSup
 
         try (Transaction tx = db.beginTx()) {
             try (ResourceIterator<Entity> iterator = entityUtil.queryIndexWithOptions(tx, "zebra", "{}")) {
-                var list = iterator.stream().collect(toList());
+                var list = iterator.stream().toList();
                 assertSearchResults(list, totalEntities - 1);
             }
             tx.commit();
@@ -97,7 +96,7 @@ class FulltextPartitionedIndexSkipAndLimitTest extends FulltextProceduresTestSup
 
         try (Transaction tx = db.beginTx()) {
             try (ResourceIterator<Entity> iterator = entityUtil.queryIndexWithOptions(tx, "zebra", "{limit:1}")) {
-                var list = iterator.stream().collect(toList());
+                var list = iterator.stream().toList();
                 assertSearchResults(list, 0);
             }
             tx.commit();
@@ -113,7 +112,7 @@ class FulltextPartitionedIndexSkipAndLimitTest extends FulltextProceduresTestSup
             var limit = random.nextInt(1, totalEntities + 1);
             try (ResourceIterator<Entity> iterator =
                     entityUtil.queryIndexWithOptions(tx, "zebra", "{limit: " + limit + "}")) {
-                var list = iterator.stream().collect(toList());
+                var list = iterator.stream().toList();
                 assertSearchResults(list, limit - 1);
             }
             tx.commit();
